--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,31 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 # Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
-workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
-    jobs:
-      - welcome/run
+jobs:
+  build:
+    docker:
+      - image: google/cloud-sdk:264.0.0
+        environment:
+          GCR_REPO_1: gcr.io/go-portforio/purchase-request-consumer:circle-ci
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 18.06.0-ce
+      - run:
+          name: Authenticate gcloud to push the image
+          command: |
+            echo $GCP_SERVICE_KEY | gcloud auth activate-service-account --key-file -
+            gcloud auth configure-docker --quiet
+      - run:
+          name: gcloud install & setting
+          command: |
+            curl -s https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-196.0.0-linux-x86_64.tar.gz | tar xz
+            source ./google-cloud-sdk/path.bash.inc
+      - run:
+          name: Build the ecpay-purchase
+          command: |
+            docker build -t ${GCR_REPO_1} .
+      - run:
+          name: Push the ecpay-purchase
+          command: |
+            docker push ${GCR_REPO_1}
