--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,34 @@ orbs:
   slack: circleci/slack@3.3.0
 
 jobs:
-  build:
+  publish-test-container:
+    docker:
+      - image: google/cloud-sdk:264.0.0
+        environment:
+          GCR_REPO_TEST: gcr.io/go-portforio/consumer-test:circle-ci
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 18.06.0-ce
+      - run:
+          name: Authenticate gcloud to push the image
+          command: |
+            echo $GCP_SERVICE_KEY | gcloud auth activate-service-account --key-file -
+            gcloud auth configure-docker --quiet
+      - run:
+          name: gcloud install & setting
+          command: |
+            curl -s https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-196.0.0-linux-x86_64.tar.gz | tar xz
+            source ./google-cloud-sdk/path.bash.inc
+      - run:
+          name: Build the searchitem
+          command: |
+            docker build -t ${GCR_REPO_TEST} --build-arg TOKEN=${GIT_PRIVATE_TOKEN} .
+      - run:
+          name: Push the searchitem
+          command: |
+            docker push ${GCR_REPO_TEST}
+  publish:
     docker:
       - image: google/cloud-sdk:264.0.0
         environment:
@@ -36,3 +63,43 @@ jobs:
           success_message: ':circleci-pass: $CIRCLE_BRANCH のデプロイが完了しました\n:github_octocat: User：$CIRCLE_USERNAME'
           failure_message: ':circleci-fail: $CIRCLE_BRANCH のデプロイが失敗しました\n:github_octocat: User：$CIRCLE_USERNAME'
           webhook: '${SLACK_WEBHOOK}'
+  test:
+    docker:
+      - image: google/cloud-sdk:264.0.0
+        environment:
+          GCR_REPO_PROD: gcr.io/go-portforio/search-item:circle-ci
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 18.06.0-ce
+      - run:
+          name: execute UT
+          command: |
+            echo "execute UT"
+
+workflows:
+  version: 2
+  test_and_testpublish:
+    jobs:
+      - test:
+          filters:  # 正規表現フィルターを使用すると、ブランチ全体が一致する必要があります
+            branches:
+              only:  # 以下の正規表現フィルターに一致するブランチのみが実行されます
+                - test
+      - publish-test-container:
+          requires:
+          - test
+  test_and_prodpublish:
+    jobs:
+      - hold: # <<< CircleCI Web アプリケーションで手動承認を必要とするジョブ。
+          type: approval
+          filters:  
+            branches:
+              only:
+                - master
+      - test:
+          requires:
+          - hold
+      - publish:
+          requires:
+          - test
