--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,16 +68,17 @@ jobs:
       - image: circleci/golang:1.16
         environment:
           SECRET_USER: root
-          SECRET_PASS: ""
+          SECRET_PASS: testpass
           SECRET_DB: cloudsql.mockten.db.com
           SECRET_TABLE: 
       - image: circleci/redis:6.0-alpine
       - image: circleci/mysql:8.0
         environment:
           MYSQL_ALLOW_EMPTY_PASSWORD: true
+          MYSQL_ROOT_PASSWORD: testpass
           MYSQL_DATABASE: cloudsql.mockten.db.com
           MYSQL_HOST: 127.0.0.1
-          MYSQL_USER: root
+    working_directory: /src
     steps:
       - checkout
       - run:
