--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
           MYSQL_ROOT_PASSWORD: testpass
           MYSQL_DATABASE: cloudsql.mockten.db.com
           MYSQL_HOST: 127.0.0.1
-    working_directory: /src
+    working_directory: /go/src/
     steps:
       - checkout
       - run:
