--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,7 +90,8 @@ jobs:
             go get github.com/prometheus/client_golang/prometheus &&
             go get github.com/prometheus/client_golang/prometheus/promhttp &&
             go build src/worker.go &&
-            go test -run _DB .
+            cd src/ &&
+            go test -run _DB . 
 
 workflows:
   version: 2
