--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,6 +82,17 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Waiting for MySQL to be ready
+          command: |
+            
+            for i in `seq 1 10`;
+            do
+              nc -z 127.0.0.1 3306 && echo Success && exit 0
+              echo -n .
+              sleep 1
+            done
+            echo Failed waiting for MySQL && exit 1
+      - run:
           command: |
             go get github.com/yabamuro/gocelery &&
             go get github.com/go-sql-driver/mysql &&
