--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,6 +96,11 @@ jobs:
             done
             echo Failed waiting for MySQL && exit 1
       - run:
+          name: Install MySQL CLI; Import dummy data; run an example query
+          command: |
+            sudo apt-get install default-mysql-client
+            mysql -h 127.0.0.1 -u user -ppassw0rd cloudsql.mockten.db.com < sql-data/dummy.sql
+      - run:
           command: |
             go get github.com/yabamuro/gocelery &&
             go get github.com/go-sql-driver/mysql &&
