--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,11 +66,11 @@ jobs:
   test:
     docker:
       - image: circleci/golang:1.16
-        environment:
-          SECRET_USER: user
-          SECRET_PASS: passw0rd
-          SECRET_DB: cloudsql.mockten.db.com
-          SECRET_TABLE: mockten
+        #environment:
+        #  SECRET_USER: user
+        #  SECRET_PASS: passw0rd
+        #  SECRET_DB: cloudsql.mockten.db.com
+        #  SECRET_TABLE: mockten
       - image: circleci/redis:6.0-alpine
       - image: circleci/mysql:8.0
         command: mysqld --default-authentication-plugin=mysql_native_password
