--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,7 +99,7 @@ jobs:
           name: Install MySQL CLI; Import dummy data; run an example query
           command: |
             sudo apt-get install default-mysql-client
-            mysql -h 127.0.0.1 -u user -ppassw0rd cloudsql.mockten.db.com < sql-data/dummy.sql
+            mysql -h 127.0.0.1 -u user -ppassw0rd mockten < sql-data/dummy.sql
       - run:
           command: |
             go get github.com/yabamuro/gocelery &&
