--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,7 @@ jobs:
           SECRET_PASS: passw0rd
           SECRET_DB: 127.0.0.1
           SECRET_TABLE: mockten
+          REDIS_SERVER: localhost:6379
       - image: circleci/redis:6.0-alpine
       - image: circleci/mysql:8.0
         command: mysqld --default-authentication-plugin=mysql_native_password
