--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,34 @@ orbs:
   slack: circleci/slack@3.3.0
 
 jobs:
-  build:
+  publish-test-container:
+    docker:
+      - image: google/cloud-sdk:264.0.0
+        environment:
+          GCR_REPO_TEST: gcr.io/go-portforio/consumer-test:circle-ci
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 18.06.0-ce
+      - run:
+          name: Authenticate gcloud to push the image
+          command: |
+            echo $GCP_SERVICE_KEY | gcloud auth activate-service-account --key-file -
+            gcloud auth configure-docker --quiet
+      - run:
+          name: gcloud install & setting
+          command: |
+            curl -s https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-196.0.0-linux-x86_64.tar.gz | tar xz
+            source ./google-cloud-sdk/path.bash.inc
+      - run:
+          name: Build the searchitem
+          command: |
+            docker build -t ${GCR_REPO_TEST} --build-arg TOKEN=${GIT_PRIVATE_TOKEN} .
+      - run:
+          name: Push the searchitem
+          command: |
+            docker push ${GCR_REPO_TEST}
+  publish:
     docker:
       - image: google/cloud-sdk:264.0.0
         environment:
@@ -36,3 +63,81 @@ jobs:
           success_message: ':circleci-pass: $CIRCLE_BRANCH のデプロイが完了しました\n:github_octocat: User：$CIRCLE_USERNAME'
           failure_message: ':circleci-fail: $CIRCLE_BRANCH のデプロイが失敗しました\n:github_octocat: User：$CIRCLE_USERNAME'
           webhook: '${SLACK_WEBHOOK}'
+  test:
+    docker:
+      - image: circleci/golang:1.16
+        environment:
+          SECRET_USER: user
+          SECRET_PASS: passw0rd
+          SECRET_DB: 127.0.0.1
+          SECRET_TABLE: mockten
+          REDIS_SERVER: localhost:6379
+      - image: circleci/redis:6.0-alpine
+      - image: circleci/mysql:8.0
+        command: mysqld --default-authentication-plugin=mysql_native_password
+        environment:
+          # MYSQL_ALLOW_EMPTY_PASSWORD: true
+          MYSQL_PASSWORD: passw0rd
+          MYSQL_ROOT_PASSWORD: rootpw
+          MYSQL_DATABASE: mockten
+          MYSQL_HOST: 127.0.0.1
+          MYSQL_USER: user
+    working_directory: /go/src/
+    steps:
+      - checkout
+      - run:
+          name: Waiting for MySQL to be ready
+          command: |
+            
+            for i in `seq 1 10`;
+            do
+              nc -z 127.0.0.1 3306 && echo Success && exit 0
+              echo -n .
+              sleep 1
+            done
+            echo Failed waiting for MySQL && exit 1
+      - run:
+          name: Install MySQL CLI; Import dummy data; run an example query
+          command: |
+            sudo apt-get install default-mysql-client
+            mysql -h 127.0.0.1 -u user -ppassw0rd mockten < sql-data/dummy.sql
+      - run:
+          command: |
+            go get github.com/yabamuro/gocelery &&
+            go get github.com/go-sql-driver/mysql &&
+            go get github.com/go-redis/redis/v8 &&
+            go get github.com/stripe/stripe-go &&
+            go get github.com/stripe/stripe-go/paymentintent &&
+            go get github.com/prometheus/client_golang/prometheus &&
+            go get github.com/prometheus/client_golang/prometheus/promhttp &&
+            go build src/worker.go &&
+            cd src/ &&
+            go test -run _DB . 
+
+workflows:
+  version: 2
+  test_and_testpublish:
+    jobs:
+      - test:
+          filters:  # 正規表現フィルターを使用すると、ブランチ全体が一致する必要があります
+            branches:
+              only:  # 以下の正規表現フィルターに一致するブランチのみが実行されます
+                - test
+                - develop
+      - publish-test-container:
+          requires:
+          - test
+  test_and_prodpublish:
+    jobs:
+      - hold: # <<< CircleCI Web アプリケーションで手動承認を必要とするジョブ。
+          type: approval
+          filters:  
+            branches:
+              only:
+                - master
+      - test:
+          requires:
+          - hold
+      - publish:
+          requires:
+          - test
