--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,6 +110,7 @@ jobs:
             go get github.com/stripe/stripe-go/paymentintent &&
             go get github.com/prometheus/client_golang/prometheus &&
             go get github.com/prometheus/client_golang/prometheus/promhttp &&
+            go get go.uber.org/zap &&
             go build src/worker.go &&
             cd src/ &&
             go test -run _DB . 
