--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,6 +99,7 @@ jobs:
       - run:
           name: Install MySQL CLI; Import dummy data; run an example query
           command: |
+            sudo apt-get update
             sudo apt-get install default-mysql-client
             mysql -h 127.0.0.1 -u user -ppassw0rd mockten < sql-data/dummy.sql
       - run:
