--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,4 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
 orbs:
   slack: circleci/slack@3.3.0
 
@@ -112,8 +110,7 @@ jobs:
             go get github.com/prometheus/client_golang/prometheus &&
             go get github.com/prometheus/client_golang/prometheus/promhttp &&
             go get go.uber.org/zap &&
-            go build src/worker.go &&
-            cd src/
+            go build worker.go &&
           # go test -run _DB . 
 
 workflows:
