--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,18 +30,19 @@ jobs:
   docker_build:
     runs-on: ubuntu-18.04
     steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v1
-      - name: GCP Authenticate
-        uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v1'
         with:
-          version: '275.0.0'
-          service_account_email: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
-          service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+      - name: GCP Authenticate
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@v1
+        #with:
+        #  version: '275.0.0'
+        #  service_account_email: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
+        #  service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
       - name: Configure docker to use the gcloud cli
         run: gcloud auth configure-docker --quiet
       - name: Build a docker image
-        # run: docker build -t asia.gcr.io/${{ secrets.GCP_PROJECT_ID }}/payexecution_snapshot:${GITHUB_SHA::7} ./
         run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/payexecution_snapshot:${GITHUB_SHA::7} .
 
   docker_push:
