--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,36 +30,37 @@ jobs:
   docker_build:
     runs-on: ubuntu-18.04
     steps:
-      - id: 'auth'
-        uses: 'google-github-actions/auth@v1'
-        with:
-          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
-      - name: GCP Authenticate
-        uses: GoogleCloudPlatform/github-actions/setup-gcloud@v1
-        #with:
-        #  version: '275.0.0'
-        #  service_account_email: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
-        #  service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-      - name: Configure docker to use the gcloud cli
-        run: gcloud auth configure-docker --quiet
-      - name: Build a docker image
-        run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/payexecution_snapshot:${GITHUB_SHA::7} .
+    - id: 'auth'
+      uses: 'google-github-actions/auth@v1'
+      with:
+        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+    - name: GCP Authenticate
+      uses: GoogleCloudPlatform/github-actions/setup-gcloud@v1
+      #with:
+      #  version: '275.0.0'
+      #  service_account_email: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
+      #  service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+    - name: Configure docker to use the gcloud cli
+      run: gcloud auth configure-docker --quiet
+    - name: Build a docker image
+      # run: docker build -t asia.gcr.io/${{ secrets.GCP_PROJECT_ID }}/payexecution_snapshot:${GITHUB_SHA::7} ./
+      run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/payexecution_snapshot:${GITHUB_SHA::7} .
 
   docker_push:
     runs-on: ubuntu-18.04
     steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v1
-      - name: GCP Authenticate
-        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-        with:
-          version: '275.0.0'
-          service_account_email: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
-          service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-      - name: Configure docker to use the gcloud cli
-        run: gcloud auth configure-docker --quiet
-      - name: Build a docker image
-        run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/payexecution_snapshot:${GITHUB_SHA::7} .
-      - name: Push the docker image
-        run: docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/payexecution_snapshot:${GITHUB_SHA::7} .
+    - name: Checkout the repository
+      uses: actions/checkout@v1
+    - name: GCP Authenticate
+      uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+      with:
+        version: '275.0.0'
+        service_account_email: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
+        service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+    - name: Configure docker to use the gcloud cli
+      run: gcloud auth configure-docker --quiet
+    - name: Build a docker image
+      run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/payexecution_snapshot:${GITHUB_SHA::7} .
+    - name: Push the docker image
+      run: docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/payexecution_snapshot:${GITHUB_SHA::7} .
 
