--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,15 +32,15 @@ jobs:
     steps:
     - name: Checkout the repository
       uses: actions/checkout@v1
-      
+
     - id: 'auth'
       uses: 'google-github-actions/auth@v1'
       with:
         credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
     - name: GCP Authenticate
       uses: GoogleCloudPlatform/github-actions/setup-gcloud@v1
-      #with:
-      #  version: '275.0.0'
+      with:
+        version: '>= 363.0.0'
       #  service_account_email: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
       #  service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
     - name: Configure docker to use the gcloud cli
