--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,8 +26,8 @@ jobs:
 
     - name: Test
       run: go test -v .
-
-  docker_build:
+  
+  credential:
     runs-on: ubuntu-18.04
     steps:
     - name: Checkout the repository
@@ -36,9 +36,22 @@ jobs:
     - id: 'auth'
       uses: 'google-github-actions/auth@v1'
       with:
-        credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+        credentials_json: ${{ secrets.GCP_CREDENTIALS }}    
+
+
+  docker_build:
+    runs-on: ubuntu-18.04
+    needs: credential
+    #steps:
+    #- name: Checkout the repository
+    #  uses: actions/checkout@v1
+
+    #- id: 'auth'
+    #  uses: 'google-github-actions/auth@v1'
+    #  with:
+    #    credentials_json: ${{ secrets.GCP_CREDENTIALS }}
     - name: GCP Authenticate
-      uses: GoogleCloudPlatform/github-actions/setup-gcloud@v0
+      uses: GoogleCloudPlatform/github-actions/setup-gcloud@v1
       with:
         version: '>= 363.0.0'
         service_account_email: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
