--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,10 +38,10 @@ jobs:
       with:
         credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
-    # - name: Setup GCloud
-    #   uses: GoogleCloudPlatform/github-actions/setup-gcloud@v1
-    #   with:
-    #     version: '>= 363.0.0'
+    - name: Setup GCloud
+      uses: 'GoogleCloudPlatform/github-actions/setup-gcloud@v1'
+      with:
+        version: '>= 363.0.0'
     #     service_account_email: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
     #     service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
     #- name: Configure docker to use the gcloud cli
