--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,17 +33,17 @@ jobs:
     - name: Checkout the repository
       uses: actions/checkout@v1
 
-    # - name: GCP Authenticate
-    #   uses: 'google-github-actions/auth@v1'
-    #   with:
-    #     credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+    - name: GCP Authenticate
+      uses: 'google-github-actions/auth@v1'
+      with:
+        credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
     - name: Setup GCloud
-      uses: 'GoogleCloudPlatform/github-actions/setup-gcloud@v1'
+      uses: 'google-github-actions/setup-gcloud@v1'
       with:
         version: '>= 363.0.0'
-    #     service_account_email: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
-    #     service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+        service_account_email: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
+        service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
     #- name: Configure docker to use the gcloud cli
     #  run: gcloud auth configure-docker --quiet
     #- name: Build a docker image
